RESOLVED FIXED126958
Fix typedef of DragDataRef from id back to id<NSDraggingInfo>
https://bugs.webkit.org/show_bug.cgi?id=126958
Summary Fix typedef of DragDataRef from id back to id<NSDraggingInfo>
David Kilzer (:ddkilzer)
Reported 2014-01-13 20:18:01 PST
The fix for Bug 120183 changed the typedef of DragDataRef from id<NSDragInfo> to id. Once clang adds a __has_feature() macro for this change, we can change it back again by using __has_feature() inside the WebCore.exp.in file to list the new symbol after the ABI change.
Attachments
Patch v1 (3.15 KB, patch)
2014-01-13 20:27 PST, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2014-01-13 20:18:17 PST
David Kilzer (:ddkilzer)
Comment 2 2014-01-13 20:27:04 PST
Created attachment 221100 [details] Patch v1
WebKit Commit Bot
Comment 3 2014-01-13 21:12:21 PST
Comment on attachment 221100 [details] Patch v1 Clearing flags on attachment: 221100 Committed r161944: <http://trac.webkit.org/changeset/161944>
WebKit Commit Bot
Comment 4 2014-01-13 21:12:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.