Fix typedef of DragDataRef from id back to id<NSDraggingInfo> <http://webkit.org/b/126958> <rdar://problem/14814649>

Reviewed by Mark Rowe.

* WebCore.exp.in: Export different symbols based on
__has_feature(objc_protocol_qualifier_mangling) since clang
mangles the type differently with that change.

* platform/DragData.h:
* platform/mac/DragDataMac.mm:
(WebCore::DragData::DragData):
- Revert r154493 by switching back to id<NSDraggingInfo>.


Canonical link: https://commits.webkit.org/144934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161944 268f45cc-cd09-0410-ab3c-d52691b4dbfc